<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.datadoghq</groupId>
		<artifactId>dd-trace-java</artifactId>
		<version>1.0-SNAPSHOT</version>
	</parent>

	<artifactId>dd-java-agent</artifactId>
	<packaging>jar</packaging>
	<name>dd-java-agent</name>


	<properties>
		<ot.dd-trace.version>1.0-SNAPSHOT</ot.dd-trace.version>
		<ot.agent.version>0.0.12</ot.agent.version>
		<ot.contrib.webservlet.version>0.0.8</ot.contrib.webservlet.version>
		<ot.contrib.mongo.version>0.0.1</ot.contrib.mongo.version>
		<ot.contrib.okhttp.version>0.0.4</ot.contrib.okhttp.version>
		<opentracing.version>0.22.0</opentracing.version>
		<java.version>1.8</java.version>
	</properties>

	<dependencies>

		<!-- DD tracer CORE -->
		<dependency>
			<groupId>com.datadoghq</groupId>
			<artifactId>dd-trace</artifactId>
			<version>${ot.dd-trace.version}</version>
		</dependency>

		<!-- opentracing agent -->
		<dependency>
			<groupId>io.opentracing.contrib</groupId>
			<artifactId>opentracing-agent</artifactId>
			<version>${ot.agent.version}</version>
		</dependency>
		<dependency>
			<groupId>io.opentracing.contrib</groupId>
			<artifactId>opentracing-agent-rules-java-okhttp</artifactId>
			<version>${ot.agent.version}</version>
		</dependency>
		<dependency>
			<groupId>io.opentracing.contrib</groupId>
			<artifactId>opentracing-agent-rules-java-web-servlet-filter</artifactId>
			<version>${ot.agent.version}</version>
		</dependency>

		<!-- Used to find annotated methods -->
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.9.11</version>
		</dependency>

		<!-- Server side instrumentation -->
		<dependency>
			<groupId>io.opentracing.contrib</groupId>
			<artifactId>opentracing-web-servlet-filter</artifactId>
			<version>${ot.contrib.webservlet.version}</version>
		</dependency>
		<dependency>
			<groupId>io.opentracing.contrib</groupId>
			<artifactId>opentracing-mongo-driver</artifactId>
			<version>${ot.contrib.mongo.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.mongodb</groupId>
					<artifactId>mongodb-driver-async</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.mongodb</groupId>
					<artifactId>mongo-java-driver</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Opentracing JDBC contribution -->
		<dependency>
			<groupId>io.opentracing.contrib</groupId>
			<artifactId>opentracing-jdbc</artifactId>
			<version>0.0.1</version>
		</dependency>

		<!-- Client side instrumentation -->
		<dependency>
			<groupId>io.opentracing.contrib</groupId>
			<artifactId>opentracing-okhttp3</artifactId>
			<version>${ot.contrib.okhttp.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.squareup.okhttp3</groupId>
					<artifactId>okhttp</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- AWS SDK instrumentation -->
		<dependency>
			<groupId>io.opentracing.contrib</groupId>
			<artifactId>opentracing-aws-sdk</artifactId>
			<version>0.0.1</version>
			<exclusions>
				<exclusion>
					<groupId>com.amazonaws</groupId>
					<artifactId>aws-java-sdk</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Apache HTTP instrumentation -->
		<dependency>
			<groupId>io.opentracing.contrib</groupId>
			<artifactId>opentracing-apache-httpclient</artifactId>
			<version>0.0.1</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpclient</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- ES instrumentation -->
		<dependency>
			<groupId>io.opentracing.contrib</groupId>
			<artifactId>opentracing-elasticsearch-client</artifactId>
			<version>0.0.1</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.elasticsearch.client</groupId>
					<artifactId>transport</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- JUnit tests -->
		<dependency>
			<groupId>io.opentracing</groupId>
			<artifactId>opentracing-mock</artifactId>
			<version>${opentracing.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.6.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.7.22</version>
			<scope>test</scope>
		</dependency>

		<!-- Mongo tests -->
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongo-java-driver</artifactId>
			<version>3.4.2</version>
			<scope>test</scope>
		</dependency>

		<!-- Jetty Servlet tests -->
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>9.4.1.v20170120</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-servlet</artifactId>
			<version>9.4.1.v20170120</version>
			<scope>test</scope>
		</dependency>

		<!-- Tomcat Servlet tests -->
		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-core</artifactId>
			<version>8.0.41</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-jasper</artifactId>
			<version>8.0.41</version>
			<scope>test</scope>
		</dependency>

		<!-- AWS SDK tests -->
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk</artifactId>
			<version>1.11.132</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpclient</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- OkHTTP tests -->
		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			<version>3.6.0</version>
			<scope>test</scope>
		</dependency>

		<!-- Apache HTTP client tests -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.3</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
	<build>
		<finalName>${project.artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.20</version>
				<configuration>
					<includes>
						<include>*Test.java</include>
					</includes>
					<excludes>
						<exclude>ElasticSearchInstrumentationTest.java</exclude>
					</excludes>
					<forkCount>3</forkCount>
					<reuseForks>false</reuseForks>
					<argLine>-Xmx500m -Xms500m -XX:MaxPermSize=256m -Dorg.jboss.byteman.verbose=true -Djavaagent.enableAnnotations
						-javaagent:${M2_REPO}/com/datadoghq/dd-java-agent/${project.version}/dd-java-agent-${project.version}.jar</argLine>
					<workingDirectory>target/FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<artifactSet>
								<excludes>
									<!-- <exclude>ch.qos.logback:*</exclude> -->
									<!-- <exclude>org.slf4j:*</exclude> -->
								</excludes>
							</artifactSet>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
									<resource>otarules.btm</resource>
								</transformer>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Agent-Class>io.opentracing.contrib.agent.AnnotationsTracingAgent</Agent-Class>
										<Premain-Class>io.opentracing.contrib.agent.AnnotationsTracingAgent</Premain-Class>
										<Can-Redefine-Classes>true</Can-Redefine-Classes>
										<Can-Retransform-Classes>true</Can-Retransform-Classes>
										<Boot-Class-Path>./${project.artifactId}.jar</Boot-Class-Path>
									</manifestEntries>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>